--- a/java/com.import.io.api.clientlite/pom.xml
+++ b/java/com.import.io.api.clientlite/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.12</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
