--- a/java/com.import.io.api.clientlite/pom.xml
+++ b/java/com.import.io.api.clientlite/pom.xml
@@ -10,6 +10,18 @@
 	<description>A client library for import.io that only depends on the JDK. Not suitable for very high concurrency.</description>
 	<url>https://import.io</url>
 
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/import-io/importio-client-libs.git</url>
+	</scm>
+  
 	<build>
 		<plugins>
 			<plugin>
@@ -24,6 +36,26 @@
 						<Bundle-Version>${project.version}</Bundle-Version>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
